# AI-SMART-GYM-MIRROR

./: .gitignore  README.md  docker-compose.yml
ai_engine/: __init__.py
ai_engine/exercise_recognition/: __init__.py  classifier.py
ai_engine/form_analysis/: __init__.py  form_analyzer.py
ai_engine/injury_detection/: __init__.py  injury.py
ai_engine/muscle_mapper/: __init__.py  mapper.py
ai_engine/pose_detection/: __init__.py  pose.py
ai_engine/rep_counter/: rep_counter.py
ai_engine/workout_recommendation/: __init__.py  recommender.py
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  requirements-pinned.txt  requirements.txt  run_server.py
backend/alembic/: env.py
backend/alembic/versions/: 1a2b3c4d5e6f_initial.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  analytics.py  auth.py  coach.py  plans.py  sessions.py  ws.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  exercise.py  form_issue.py  pose_frame.py  rep.py  session.py  user.py
backend/app/schemas/: __init__.py  analytics.py  coach.py  plans.py  session.py  user.py
backend/app/services/: auth_service.py  session_service.py
backend/app/websocket/: __init__.py  manager.py
backend/app/workers/: celery_app.py
backend/tests/: test_health.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/static/: index.html
infra/: README.md
ml/: README.md
scripts/: README.md
