[tool.poetry]
name = "ai-smart-gym-mirror-backend"
version = "0.1.0"
description = "FastAPI backend for AI Smart Gym Mirror"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = {extras=["standard"], version="^0.22.0"}
SQLAlchemy = "^1.4.0"
asyncpg = "^0.27.0"
alembic = "^1.11.0"
python-jose = "^3.3.0"
passlib = {extras=["bcrypt"], version="^1.7.4"}
pydantic = "^1.10.0"
python-multipart = "^0.0.6"
celery = "^5.3.0"
redis = "^4.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
